<resources>
    <string name="app_name">Smart Step</string>
    <string name="add_folder">Add folder</string>
    <string name="add_file">Add file</string>
    <string name="view_as">View as</string>
    <string name="big_items">Large items</string>
    <string name="small_items">Small items</string>
    <string name="delete_current_folder">Delete current folder</string>
    <string name="home">Home</string>
    <string name="folder_name">Folder name:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="the_folder_is_empty">The folder is empty</string>
    <string name="name_already_used">Name already used !</string>
    <string name="file_name">File name :</string>
    <string name="please_enter_the_name_field">Please enter the name field</string>
    <string name="new_name">New name</string>
    <string name="rename">Rename</string>
    <string name="something_wrong">Something wrong !!</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="delete">Delete</string>
    <string name="add_image">Add Image</string>
    <string name="crop">Crop</string>
    <string name="back">Back</string>
    <string name="empty_file">Empty file</string>
    <string name="order">Order</string>
    <string name="camera">Camera</string>
    <string name="choose">Choose</string>
    <string name="gallery">Gallery</string>
    <string name="pdf_not_exist">Pdf not exist</string>
    <string name="generate_pdf">Generate pdf</string>
    <string name="delete_this_image">Delete this image?</string>
    <string name="ok">Ok</string>
    <string name="no_folder_or_file_in_this_name">No folder or file in this name !</string>
    <string name="please_wait">Please wait..</string>
    <string name="delete_folder">Delete folder</string>
    <string name="main_folder_cant_be_deleted">Main folder can\'t be deleted !</string>
    <string name="empty_file_2">Empty file !</string>
    <string name="image_cant_be_cropped">Image can\'t be cropped !</string>
    <string name="error">Error</string>
    <string name="long_press_on_the_image_then_drag">Long press on the image then drag</string>
    <string name="don_t_show_again">Don\'t show again</string>
    <string name="database_has_been_exported">Database has been exported</string>
    <string name="database_has_been_imported">Database has been imported</string>
    <string name="export_database">Export database</string>
    <string name="import_database">Import database</string>
</resources>
